--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ asgiref==3.7.2
 certifi==2023.7.22
 charset-normalizer==3.2.0
 dj-database-url==2.1.0
-Django==3.2.21
-django-cors-headers==4.1.0
+Django==4.2.4
+django-cors-headers==4.2.0
 django-environ==0.11.2
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
@@ -20,3 +20,4 @@ stripe==6.4.0
 typing_extensions==4.7.1
 tzdata==2023.3
 urllib3==2.0.4
+whitenoise==6.5.0
